2007-03-19  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed compilation failure for a NetBSD
	g++ which has _L and _N as predefined symbols (don't know if
	in headers or built-in).

2007-03-14  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l: Lexer modifications for the Spice 2g6 resistor
	syntax were necessary.

	* parse_spice.y: Allow Spice 2g6 syntax for resistors, also
	fixed netlist grammar for Spice 3f5 models.

	* check_spice.cpp: Handle R semiconductor model correctly as
	well as the Spice 2g6 syntax for the temperature coefficients.

2007-03-11  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed DC offset of sinuasoidal voltage and
	current sources.  Also apply default frequency if a transient
	analysis is given.

2007-03-08  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Fixed detection of a single subcircuit
	definition (skip analysis actions).

	* check_spice.cpp: Handling periodic pulse sources correctly.
	Also default Tr/Tf values for these sources to a given .TRAN step
	value.

2007-03-06  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Updated the parameter order and added
	Ikf parameter for the qucs library creator.

2007-02-11  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Added translation of lossless transmission
	line component.

2007-02-09  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed value of F and H (linear current
	controlled sources).  Thanks Mike for pointing this out.

2007-02-03  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Translating VON and VOFF properties of
	switches into Vt and Vh.  Also fixing R value for resistors
	whose value is also given in the resistor model it refers to.

2007-02-01  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l: Allowing subcircuit identifiers to begin with
	a digit.  Also fixing it afterwards.  Introduced component
	suffix macro.  Identifying VSWITCH model.

	* check_spice.cpp: Allowing the SW model also be referenced as
	VSWITCH.
